--- a/src/css/about.css
+++ b/src/css/about.css
@@ -35,3 +35,18 @@
     font-size: 18px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .about {
+      height: 360px;
+  }
+
+  .about__title {
+    font-size: 26px;
+  }
+
+  .about__description {
+    font-size: 14px;
+    margin-top: 30px;
+  }
+}
