--- a/src/css/work-process.css
+++ b/src/css/work-process.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 929px;
+  max-height: 929px;
 }
 
   .work-process__video {
-    height: 571px;
     margin-top: 57px;
+    margin-bottom: 100px;
   }
 
   .work-process__title {
@@ -37,15 +37,18 @@
 }
 
 .c-video {
-  max-width: 1170px;
+  max-height: 571px;
+  max-width: 1015px;
+  width: 75vw;
   position: relative;
   display: flex;
-  height: inherit;
 }
 
 
 .video {
-  height: inherit;
+  max-height: 571px;
+  max-width: 1015px;
+  width: 75vw;
 }
 
 .controls {
@@ -109,5 +112,27 @@
   .work-process__description {
     font-size: 18px;
     width: 590px;
+  }
+
+  .work-process__title {
+    font-size: 20px;
+  }
+}
+
+
+@media screen and (max-width: 1024px) {
+  .work-process__video {
+    margin-top: 27px;
+    margin-bottom: 85px;
+  }
+
+  .work-process__title {
+    margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .work-process__title {
+    font-size: 26px;
   }
 }
