--- a/src/css/header.css
+++ b/src/css/header.css
@@ -91,12 +91,33 @@
 @media screen and (max-width: 767px) {
   .header__menu-item { margin-left: 15px; }
 
-  .header__menu { display: none; }
+  .header__menu {
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f8f9f9;
+    z-index: 9;
+    padding-top: 40px;
+    visibility: hidden;
+  }
+
+  .header__menu-item {
+    margin: 0;
+    width: 100%;
+    text-align: center;
+    padding: 1em 0;
+  }
+
   .header__burger {
     display: inline-block;
-    position: relative;
+    position: fixed;
     width: 30px;
     height: 20px;
+    z-index: 10;
+    right: 7.2vw;
   }
 
   .header__burger::before,
