--- a/src/css/services.css
+++ b/src/css/services.css
@@ -73,3 +73,15 @@
   .services__item-description { font-size: 12px; }
   .services__item-img { height: 34px; }
 }
+
+@media screen and (max-width: 674px) {
+  .services {
+    justify-content: center;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 35vw);
+    grid-row-gap: 50px;
+    height: fit-content;
+  }
+  .services__item-title { margin-top: 15px; }
+  .services__item-description { margin-top: 10px; }
+}
