--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -55,12 +55,30 @@
   }
 
   .skills__professional-title {
-    font-size: 26px;
+    font-size: 20px;
   }
 
   .skills__professional-name {
     margin: 0;
     margin-bottom: 15px;
     margin-top: 31px;
+    font-size: 10px;
   }
+}
+
+@media screen and (max-width: 487px) {
+  .skills {
+    height: 585px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 285px 300px;
+  }
+
+  .skills__professional {
+    padding: 40px 0;
+    padding-bottom: 60px;
+    justify-self: center;
+    margin: 0;
+  }
+
+  .progress { width: 70vw; }
 }
