--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -68,5 +68,6 @@
                          "company company company"
                          "contacts contacts contacts";
     grid-template-rows: 1fr 1fr 1fr;
+    font-size: 0.8rem;
   }
 }
